# fan-files

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh  skill.yaml
.claude-plugin/: plugin.json
config/: default.toml
crates/fan-agent/: Cargo.toml
crates/fan-agent/src/: main.rs
crates/fan-core/: Cargo.toml
crates/fan-core/src/: bold.rs  config.rs  detector.rs  discovery.rs  index.rs  infer.rs  infer_hierarchical.rs  interpreter.rs  lib.rs  plugin.rs  project.rs  review.rs  scanner.rs  suggest.rs  types.rs  watcher.rs
crates/fan-core/src/index/: embedding.rs  mod.rs  sqlite.rs  tantivy.rs
crates/fan-core/src/llm/: mod.rs  prompt.rs
crates/fan-core/src/plugin/: mod.rs  registry.rs
crates/fan-core/tests/: integration_test.rs  interpreter_test.rs  llm_inference_test.rs
crates/fan-files/: Cargo.toml
crates/fan-files/src/: main.rs  skill.rs  version.rs  version_check.rs
crates/fan-files/src/commands/: daemon.rs  discover.rs  infer.rs  info.rs  init.rs  list.rs  mod.rs  pending.rs  projects.rs  search.rs  servers.rs  status.rs  suggest.rs  uninstall.rs  update.rs
crates/fan-files/tests/: cli_test.rs
crates/fan-plugin-sdk/: Cargo.toml
crates/fan-plugin-sdk/src/: lib.rs
docs/superpowers/plans/: 2026-05-10-fan-files-implementation.md  2026-05-13-llm-inference-plan.md  2026-05-13-metadata-integration-plan.md  2026-05-14-interactive-metadata-plan.md  2026-05-15-public-data-integration-plan.md  2026-06-02-code-quality-plan.md  2026-06-02-install-uninstall-plan.md  2026-06-02-usability-improvements-plan.md  2026-06-20-source-server-plan.md
docs/superpowers/specs/: 2026-05-10-fan-files-design.md  2026-05-13-llm-inference-design.md  2026-05-13-metadata-integration-design.md  2026-05-14-analysis-assistant-design.md  2026-05-14-interactive-metadata-design.md  2026-05-15-public-data-integration-design.md  2026-06-02-code-quality-design.md  2026-06-02-install-uninstall-design.md  2026-06-02-usability-improvements-design.md  2026-06-20-source-server-design.md
plugins/fastq-interpreter/: Cargo.toml
plugins/fastq-interpreter/src/: lib.rs
plugins/generic-detector/: Cargo.toml
plugins/generic-detector/src/: lib.rs
skill/: fan-files.md
skills/: analysis-assistant.md  fan-files.md
