[package]
name = "fan-files"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fan-files"
path = "src/main.rs"

[dependencies]
fan-core = { path = "../fan-core" }
fan-plugin-sdk = { path = "../fan-plugin-sdk" }
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
